modified:   src/components/bannerStyle.css 	modified:   src/components/home.css 	modified:   src/components/navbar.css

--- a/src/components/bannerStyle.css
+++ b/src/components/bannerStyle.css
@@ -3,7 +3,7 @@
     height: 250px;
 
     background-color: #147097;
-    border: 1px solid black;
+    border: 5px solid #192B43 ;
     display: flex;
     
 
