--- a/src/components/CSS_files/home.css
+++ b/src/components/CSS_files/home.css
@@ -1,7 +1,8 @@
 h1{
     color: white;
     background-color: #192B43;
-    border: 5px solid #192B43 ;
+    /* border: 5px solid #192B43 ; */
+    
 }
 
 
