--- a/src/components/CSS_files/navbar.css
+++ b/src/components/CSS_files/navbar.css
@@ -1,6 +1,8 @@
 *{
     margin: 0;
     padding: 0;
+
+    /* z-index: 1; */
     
 }
 
@@ -10,14 +12,19 @@
     /* border: 3px solid red; */
     height: 70px;
     background-color: #192B43;
+    /* position: fixed; */
 }
 
 
 
 .navbar{
     color: white;
+    background-color: #192B43;
     margin: 0;
+    height: 70px;
     padding: 0;
+    width: 100%;
+    /* position: fixed; */
     
     
 }
