--- a/src/components/CSS_files/home.css
+++ b/src/components/CSS_files/home.css
@@ -1,9 +1,11 @@
-h1{
+/* h1{
     color: white;
     background-color: #192B43;
-    /* border: 5px solid #192B43 ; */
+    padding-top: 20px;
+    padding-bottom: 10px;
+    border: 5px solid #192B43 ;
     
 }
 
 
-
+ */
