--- a/src/components/CSS_files/navbar.css
+++ b/src/components/CSS_files/navbar.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
 
+    
     /* z-index: 1; */
     
 }
@@ -12,6 +13,9 @@
     /* border: 3px solid red; */
     height: 70px;
     background-color: #192B43;
+    position: sticky;
+    top: -100;
+    /* z-index: 1000; */
     /* position: fixed; */
 }
 
@@ -19,11 +23,17 @@
 
 .navbar{
     color: white;
+    
     background-color: #192B43;
-    margin: 0;
+    /* margin: 0; */
     height: 70px;
     padding: 0;
     width: 100%;
+    position: sticky;
+    /* position: relative;
+    position: static; */
+    z-index: 1000;
+    top:0;
     /* position: fixed; */
     
     
