--- a/src/components/CSS_files/home.module.css
+++ b/src/components/CSS_files/home.module.css
@@ -7,8 +7,11 @@
     
 }
 
-
  */
+
+ body{
+   background-color: #192B43;
+ }
  .about{
     /* line-height: 40px; */
     line-height: normal;
@@ -60,4 +63,184 @@
  .container{
     display: flex;
  }
+
+
+ /* Orbit starts */
+ 
+.vector {
+   width: 40px;
+   height: 40px;
+   /* background-image: url(../images/victor2.png); */
+   /* background-image: url("../../images/profileIcon.jpg"); */
+   background-image: url("../../images/logo.jpg");
+   
+   /* background-repeat: no-repeat; */
+   /* background-position: center; */
+   
+   position: absolute;
+   background-size: 40px;
+   margin-top: 120px;
+   margin-left:  260px;
+   border-radius: 50%;
+   /* animation: rotate 10s infinite linear; */
+ } 
+ @keyframes rotate {
+   0% {
+     transform: rotate(0deg);
+   }
+   100% {
+     transform: rotate(360deg);
+   }
+ }
+ 
+ 
+ .orbit {
+   width: 200px;
+   height: 200px;
+   
+   position: absolute;
+   border-radius: 50%;
+   margin-left: 180px;
+   margin-top: 40px;
+   
+ }
+ .orbit2 {
+   width: 100px;
+   height: 100px;
+   
+   position: absolute;
+   border-radius: 50%;
+   margin-top: 90px;
+   margin-left: 230px;
+ }
+ .orbit3 {
+   width: 150px;
+   height: 150px;
+   
+   position: absolute;
+   border-radius: 50%;
+   margin-top: 65px;
+   margin-left: 205px;
+ }
+ .orbit4 {
+   width: 300px;
+   height: 300px;
+   
+   position: absolute;
+   border-radius: 50%;
+   margin-top: -10px;
+   margin-left: 130px;
+ }
+ .orbit5 {
+   width: 250px;
+   height: 250px;
+   position: absolute;
+   border-radius: 50%;
+   margin-top: 15px;
+   margin-left: 155px;
+}
+
+.orbit, .orbit2, .orbit3, .orbit4, .orbit5 {
+   border: 1px solid #505050;
+   border: 3px solid #505050;
+   border: 1px solid black;
+   border: 1px solid white;
+    
+
+ }
+
+
+ 
+ .logo {   
+   /* background-image: url(../images/C.png); */
+   background-image: url("../../images/profileIcon.jpg");   
+   margin-top: 84px;   
+   margin-left: 82px;
+   animation: orbit 2s infinite linear;
+ }
+ .logo2 {   
+   /* background-image: url(../images/figma.png); */
+   background-image: url("../../images/profileIcon.jpg");   
+   margin-top: 36px;
+   margin-left: 36px;
+   padding: 0px;
+   animation: orbit2 3s infinite linear;
+ }
+ .logo3 {
+   /* background-image: url(../images/star.png); */
+   background-image: url("../../images/profileIcon.jpg");   
+   margin-top: 60px;
+   margin-left: 60px;
+   animation: orbit3 6s infinite linear;
+ }
+ .logo4 {
+   /* background-image: url(../images/G.png); */
+   background-image: url("../../images/profileIcon.jpg");   
+   margin-top: 135px;
+   margin-left: 135px;
+   animation: orbit4 5s infinite linear;
+ }
+ .logo5 {
+   /* background-image: url(../images/tri.png); */
+   background-image: url("../../images/profileIcon.jpg");   
+   margin-top: 106px;
+   margin-left: 106px;
+   animation: orbit5 4s infinite linear;
+}
+.logo, .logo2, .logo3, .logo4, .logo5{
+
+   background-image: url("../../images/logo.jpg");
+   border-radius: 50%;
+   width: 30px;
+   height: 30px;
+   background-size: 30px;
+   background-repeat: no-repeat;
+   background-position-x: center;
+   background-position-y: center;
+
+ }
+
+
+ @keyframes orbit {
+   0% {
+     transform: rotate(0deg) translateX(100px) rotate(0deg);
+   }
+   100% {
+     transform: rotate(360deg) translateX(100px) rotate(-360deg);
+   }
+ } 
+ @keyframes orbit2 {
+   0% {
+     transform: rotate(0deg) translateX(50px) rotate(0deg);
+   }
+   100% {
+     transform: rotate(360deg) translateX(50px) rotate(-360deg);
+   }
+ } 
+ @keyframes orbit3 {
+   0% {
+     transform: rotate(0deg) translateX(75px) rotate(0deg);
+   }
+   100% {
+     transform: rotate(360deg) translateX(75px) rotate(-360deg);
+   }
+ }
+ @keyframes orbit4 {
+   0% {
+     transform: rotate(0deg) translateX(150px) rotate(0deg);
+   }
+   100% {
+     transform: rotate(360deg) translateX(150px) rotate(-360deg);
+   }
+ } 
+ @keyframes orbit5 {
+   0% {
+     transform: rotate(0deg) translateX(125px) rotate(0deg);
+   }
+   100% {
+     transform: rotate(360deg) translateX(125px) rotate(-360deg);
+   }
+ }
+ 
+ /* Orbit ends */
  
