--- a/src/components/CSS_files/home.module.css
+++ b/src/components/CSS_files/home.module.css
@@ -9,238 +9,272 @@
 
  */
 
- body{
-   background-color: #192B43;
- }
- .about{
-    /* line-height: 40px; */
-    line-height: normal;
-    font-size: 50px;
-    padding-left: 100px;
-    padding-top: 40px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    
-    
- }
- .FD{
-    
-    font-weight: bold;
-    color: #147097;
-    color: cyan;
- }
- .subAbout{
-    padding-top: 10px;
-    padding-left: 100px;
-    max-width: 600px;
-    font-size: 20px;
-    line-height: auto;
+body {
+  background-color: #192b43;
+}
+.about {
+  /* line-height: 40px; */
+  line-height: normal;
+  font-size: 55px;
+  padding-left: 100px;
+  padding-top: 40px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+/* .FD {
+  font-weight: bold;
+  
+  color: cyan;
+} */
 
- }
+.FD {
+  font-weight: bold;
+  background: linear-gradient(to right, cyan, magenta);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
- .profileIcon{
-    margin-left: 400px;
+.subAbout {
+  padding-top: 10px;
+  padding-left: 100px;
+  max-width: 600px;
+  font-size: 20px;
+  line-height: auto;
+}
 
-    width: 400px;
-    height: 400px;
-    border-radius: 50%;
-    /* border: 3px solid red; */
-    background-image: url("../../images/profileIcon.jpg");
-    background-size: 450px;
-    /* border: 4px solid cyan; */
-    background-position: center;
-    border: 5px solid  #147097;
-    
-    
-    
+.profileIcon {
+  margin-left: 400px;
 
-    
-    
-    
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  /* border: 3px solid red; */
+  background-image: url("../../images/profileIcon.jpg");
+  background-size: 450px;
+  /* border: 4px solid cyan; */
+  background-position: center;
+  border: 5px solid #147097;
+}
 
+.container {
+  display: flex;
+}
 
- }
+/* Orbit starts */
 
- .container{
-    display: flex;
- }
-
-
- /* Orbit starts */
- 
 .vector {
-   width: 40px;
-   height: 40px;
-   /* background-image: url(../images/victor2.png); */
-   /* background-image: url("../../images/profileIcon.jpg"); */
-   background-image: url("../../images/logo.jpg");
-   
-   /* background-repeat: no-repeat; */
-   /* background-position: center; */
-   
-   position: absolute;
-   background-size: 40px;
-   margin-top: 120px;
-   margin-left:  260px;
-   border-radius: 50%;
-   /* animation: rotate 10s infinite linear; */
- } 
- @keyframes rotate {
-   0% {
-     transform: rotate(0deg);
-   }
-   100% {
-     transform: rotate(360deg);
-   }
- }
- 
- 
- .orbit {
-   width: 200px;
-   height: 200px;
-   
-   position: absolute;
-   border-radius: 50%;
-   margin-left: 180px;
-   margin-top: 40px;
-   
- }
- .orbit2 {
-   width: 100px;
-   height: 100px;
-   
-   position: absolute;
-   border-radius: 50%;
-   margin-top: 90px;
-   margin-left: 230px;
- }
- .orbit3 {
-   width: 150px;
-   height: 150px;
-   
-   position: absolute;
-   border-radius: 50%;
-   margin-top: 65px;
-   margin-left: 205px;
- }
- .orbit4 {
-   width: 300px;
-   height: 300px;
-   
-   position: absolute;
-   border-radius: 50%;
-   margin-top: -10px;
-   margin-left: 130px;
- }
- .orbit5 {
-   width: 250px;
-   height: 250px;
-   position: absolute;
-   border-radius: 50%;
-   margin-top: 15px;
-   margin-left: 155px;
+  width: 40px;
+  height: 40px;
+  /* background-image: url(../images/victor2.png); */
+  /* background-image: url("../../images/profileIcon.jpg"); */
+  background-image: url("../../images/logo.jpg");
+
+  position: absolute;
+  background-size: 40px;
+  margin-top: 120px;
+  margin-left: 260px;
+  border-radius: 50%;
+  /* animation: rotate 10s infinite linear; */
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
-.orbit, .orbit2, .orbit3, .orbit4, .orbit5 {
-   border: 1px solid #505050;
-   border: 3px solid #505050;
-   border: 1px solid black;
-   border: 1px solid white;
-    
+.orbit {
+  width: 200px;
+  height: 200px;
 
- }
-
-
- 
- .logo {   
-   /* background-image: url(../images/C.png); */
-   background-image: url("../../images/profileIcon.jpg");   
-   margin-top: 84px;   
-   margin-left: 82px;
-   animation: orbit 2s infinite linear;
- }
- .logo2 {   
-   /* background-image: url(../images/figma.png); */
-   background-image: url("../../images/profileIcon.jpg");   
-   margin-top: 36px;
-   margin-left: 36px;
-   padding: 0px;
-   animation: orbit2 3s infinite linear;
- }
- .logo3 {
-   /* background-image: url(../images/star.png); */
-   background-image: url("../../images/profileIcon.jpg");   
-   margin-top: 60px;
-   margin-left: 60px;
-   animation: orbit3 6s infinite linear;
- }
- .logo4 {
-   /* background-image: url(../images/G.png); */
-   background-image: url("../../images/profileIcon.jpg");   
-   margin-top: 135px;
-   margin-left: 135px;
-   animation: orbit4 5s infinite linear;
- }
- .logo5 {
-   /* background-image: url(../images/tri.png); */
-   background-image: url("../../images/profileIcon.jpg");   
-   margin-top: 106px;
-   margin-left: 106px;
-   animation: orbit5 4s infinite linear;
+  position: absolute;
+  border-radius: 50%;
+  margin-left: 180px;
+  margin-top: 40px;
 }
-.logo, .logo2, .logo3, .logo4, .logo5{
+.orbit2 {
+  width: 100px;
+  height: 100px;
 
-   background-image: url("../../images/logo.jpg");
-   border-radius: 50%;
-   width: 30px;
-   height: 30px;
-   background-size: 30px;
-   background-repeat: no-repeat;
-   background-position-x: center;
-   background-position-y: center;
+  position: absolute;
+  border-radius: 50%;
+  margin-top: 90px;
+  margin-left: 230px;
+}
+.orbit3 {
+  width: 150px;
+  height: 150px;
 
- }
+  position: absolute;
+  border-radius: 50%;
+  margin-top: 65px;
+  margin-left: 205px;
+}
+.orbit4 {
+  width: 300px;
+  height: 300px;
 
+  position: absolute;
+  border-radius: 50%;
+  margin-top: -10px;
+  margin-left: 130px;
+}
+.orbit5 {
+  width: 250px;
+  height: 250px;
+  position: absolute;
+  border-radius: 50%;
+  margin-top: 15px;
+  margin-left: 155px;
+}
 
- @keyframes orbit {
-   0% {
-     transform: rotate(0deg) translateX(100px) rotate(0deg);
-   }
-   100% {
-     transform: rotate(360deg) translateX(100px) rotate(-360deg);
-   }
- } 
- @keyframes orbit2 {
-   0% {
-     transform: rotate(0deg) translateX(50px) rotate(0deg);
-   }
-   100% {
-     transform: rotate(360deg) translateX(50px) rotate(-360deg);
-   }
- } 
- @keyframes orbit3 {
-   0% {
-     transform: rotate(0deg) translateX(75px) rotate(0deg);
-   }
-   100% {
-     transform: rotate(360deg) translateX(75px) rotate(-360deg);
-   }
- }
- @keyframes orbit4 {
-   0% {
-     transform: rotate(0deg) translateX(150px) rotate(0deg);
-   }
-   100% {
-     transform: rotate(360deg) translateX(150px) rotate(-360deg);
-   }
- } 
- @keyframes orbit5 {
-   0% {
-     transform: rotate(0deg) translateX(125px) rotate(0deg);
-   }
-   100% {
-     transform: rotate(360deg) translateX(125px) rotate(-360deg);
-   }
- }
- 
- /* Orbit ends */
- 
+.orbit,
+.orbit2,
+.orbit3,
+.orbit4,
+.orbit5 {
+  border: 1px solid #505050;
+  border: 3px solid #505050;
+  border: 1px solid black;
+  border: 2px solid white;
+}
+
+.logo {
+  /* background-image: url(../images/C.png); */
+  background-image: url("../../images/profileIcon.jpg");
+  margin-top: 84px;
+  margin-left: 82px;
+  animation: orbit 2s infinite linear;
+}
+.logo2 {
+  /* background-image: url(../images/figma.png); */
+  background-image: url("../../images/profileIcon.jpg");
+  margin-top: 36px;
+  margin-left: 36px;
+  padding: 0px;
+  animation: orbit2 3s infinite linear;
+}
+.logo3 {
+  /* background-image: url(../images/star.png); */
+  background-image: url("../../images/profileIcon.jpg");
+  margin-top: 60px;
+  margin-left: 60px;
+  animation: orbit3 6s infinite linear;
+}
+.logo4 {
+  /* background-image: url(../images/G.png); */
+  background-image: url("../../images/profileIcon.jpg");
+  margin-top: 135px;
+  margin-left: 135px;
+  animation: orbit4 5s infinite linear;
+}
+.logo5 {
+  /* background-image: url(../images/tri.png); */
+  background-image: url("../../images/profileIcon.jpg");
+  margin-top: 106px;
+  margin-left: 106px;
+  animation: orbit5 4s infinite linear;
+}
+.logo,
+.logo2,
+.logo3,
+.logo4,
+.logo5 {
+  background-image: url("../../images/logo.jpg");
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  background-size: 30px;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: center;
+}
+
+@keyframes orbit {
+  0% {
+    transform: rotate(0deg) translateX(100px) rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg) translateX(100px) rotate(-360deg);
+  }
+}
+@keyframes orbit2 {
+  0% {
+    transform: rotate(0deg) translateX(50px) rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg) translateX(50px) rotate(-360deg);
+  }
+}
+@keyframes orbit3 {
+  0% {
+    transform: rotate(0deg) translateX(75px) rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg) translateX(75px) rotate(-360deg);
+  }
+}
+@keyframes orbit4 {
+  0% {
+    transform: rotate(0deg) translateX(150px) rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg) translateX(150px) rotate(-360deg);
+  }
+}
+@keyframes orbit5 {
+  0% {
+    transform: rotate(0deg) translateX(125px) rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg) translateX(125px) rotate(-360deg);
+  }
+}
+
+/* Orbit ends */
+
+/* Icons starts */
+.icons {
+  /* border: 1px solid red; */
+  display: flex;
+  display: list-item;
+  list-style: none;
+  margin-left: 80px;
+  align-items: end;
+  margin-top: 20px;
+  color: black;
+  /* border: 1px solid red; */
+
+  width: 300px;
+}
+.iconlist {
+  display: flex;
+  list-style: none;
+  justify-content: space-around;
+  justify-content: start;
+  /* border: 1px solid red; */
+}
+
+.iconitem {
+  /* size: 80px; */
+  font-size: 60px;
+  margin-left: 20px;
+  color: white;
+}
+
+.iconitem:hover {
+  cursor: pointer;
+  /* font-size: 70px; */
+  /* margin-bottom: 90px; */
+  color: cyan;
+}
+/* .profile{
+  color: white;
+  text-align: center;
+  font-size: 50px;
+  font-weight: 50px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  } */
+
+/* Icons ends */
