--- a/src/components/CSS_files/home.module.css
+++ b/src/components/CSS_files/home.module.css
@@ -278,3 +278,31 @@ body {
   } */
 
 /* Icons ends */
+
+.CV{
+  border: none;
+  margin-left: 100px;
+  width: 200px;
+  /* height: 50px; */  
+  color: white;  
+  font-family: Verdana, Geneva, Tahoma, sans-serif;  
+  cursor: pointer;
+  font-size: 18px;   
+  font-weight: bold;   
+  background-color: #0576f0;    
+  border-radius: 25px;           
+  transition: background-color 0.3s, transform 0.2s;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);   
+  aspect-ratio: 4/1; 
+
+}
+
+
+.CV:hover {
+  background-color: #0056b3;    /* Darker shade on hover */
+
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  
+  
+}
+
