--- a/src/components/CSS_files/navbar.css
+++ b/src/components/CSS_files/navbar.css
@@ -58,6 +58,8 @@
     /* background-color:orange; */
     background-color: #147097;
     backdrop-filter: blur(30px); 
+    background-color: #0056b3;
+    background-color: #014f82;    
     
 
 }
