--- a/src/components/CSS_files/tags.css
+++ b/src/components/CSS_files/tags.css
@@ -4,6 +4,7 @@ h1{
     background-color: #192B43;
     text-align: center;
     color: #192B43;
+    /* background-color: black; */
     
 }
 h2{
@@ -14,6 +15,7 @@ h2{
     padding-bottom: 10px;
     
     text-align: center;
+    /* background-color: black; */
     
 }
 
@@ -21,7 +23,9 @@ p{
     
     background-color: #192B43;
     color: white;
+    /* background-color: black; */
 }
+
 
 
 
